// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unpublish-document should handle unpublishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The requested document could not be found","status":404,"operationStatus":"ContentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`unpublish-document should unpublish a published document 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
